[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/FondJeu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ressources/Boutons/Button_Play.png" type="Texture" id=2]
[ext_resource path="res://Ressources/Logo/space.png" type="Texture" id=3]
[ext_resource path="res://Ressources/Logo/Logo.png" type="Texture" id=4]
[ext_resource path="res://Ressources/Boutons/Button_Help.png" type="Texture" id=5]
[ext_resource path="res://Ressources/Boutons/Button_Credits.png" type="Texture" id=6]
[ext_resource path="res://Ressources/Boutons/Button_Quit.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=8]
[ext_resource path="res://Ressources/Sons/MusiqueJeu/Automation.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 111.179, 6.98218 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 179.318, 24.4448 )

[node name="Main" type="Node"]
script = ExtResource( 8 )
__meta__ = {
"_edit_vertical_guides_": [ 490.907, 382.0, 598.0 ]
}

[node name="FondJeu" parent="." instance=ExtResource( 1 )]

[node name="Logo" type="Node" parent="."]

[node name="LogoImage1" type="Sprite" parent="Logo"]
position = Vector2( 682.747, 83.8993 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="LogoImage2" type="Sprite" parent="Logo"]
position = Vector2( 322.5, 83.3207 )
scale = Vector2( 1.3, 1.1 )
texture = ExtResource( 3 )

[node name="boutonJouer" type="Area2D" parent="."]
position = Vector2( 489.893, 222.189 )
scale = Vector2( 0.477098, 0.477098 )

[node name="boutonJoueurCollision" type="CollisionShape2D" parent="boutonJouer"]
scale = Vector2( 22.4631, 2.6768 )
shape = SubResource( 1 )

[node name="boutonJouerImage" type="Sprite" parent="boutonJouer"]
texture = ExtResource( 2 )

[node name="boutonAide" type="Area2D" parent="."]
position = Vector2( 489.893, 310.38 )
scale = Vector2( 0.477098, 0.477098 )

[node name="boutonAideCollision" type="CollisionShape2D" parent="boutonAide"]
scale = Vector2( 22.5469, 2.50912 )
shape = SubResource( 2 )

[node name="boutonAideImage" type="Sprite" parent="boutonAide"]
texture = ExtResource( 5 )

[node name="boutonCredits" type="Area2D" parent="."]
position = Vector2( -0.162231, -95.8919 )

[node name="boutonCreditsCollision" type="CollisionShape2D" parent="boutonCredits"]
position = Vector2( 490.436, 499.272 )
shape = SubResource( 3 )

[node name="boutonCreditsImage" type="Sprite" parent="boutonCredits"]
position = Vector2( 489.893, 498.035 )
scale = Vector2( 0.299783, 0.299783 )
texture = ExtResource( 6 )

[node name="boutonQuitter" type="Area2D" parent="."]
position = Vector2( 490.893, 494.357 )
scale = Vector2( 0.787512, 0.787512 )

[node name="boutonQuitterCollision" type="CollisionShape2D" parent="boutonQuitter"]
shape = SubResource( 4 )

[node name="boutonQuitterImage" type="Sprite" parent="boutonQuitter"]
texture = ExtResource( 7 )

[node name="SonBackground" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
[connection signal="input_event" from="boutonJouer" to="." method="_on_boutonJouer_input_event"]
[connection signal="mouse_entered" from="boutonJouer" to="." method="_on_boutonJouer_mouse_entered"]
[connection signal="mouse_exited" from="boutonJouer" to="." method="_on_boutonJouer_mouse_exited"]
[connection signal="input_event" from="boutonAide" to="." method="_on_boutonAide_input_event"]
[connection signal="mouse_entered" from="boutonAide" to="." method="_on_boutonAide_mouse_entered"]
[connection signal="mouse_exited" from="boutonAide" to="." method="_on_boutonAide_mouse_exited"]
[connection signal="input_event" from="boutonCredits" to="." method="_on_boutonCredits_input_event"]
[connection signal="mouse_entered" from="boutonCredits" to="." method="_on_boutonCredits_mouse_entered"]
[connection signal="mouse_exited" from="boutonCredits" to="." method="_on_boutonCredits_mouse_exited"]
[connection signal="input_event" from="boutonQuitter" to="." method="_on_boutonQuitter_input_event"]
[connection signal="mouse_entered" from="boutonQuitter" to="." method="_on_boutonQuitter_mouse_entered"]
[connection signal="mouse_exited" from="boutonQuitter" to="." method="_on_boutonQuitter_mouse_exited"]
